[tool.poetry]
name = "runleiden"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
leidenalg = "^0.9.0"
typer = "^0.6.1"
structlog = "^22.1.0"

[tool.poetry.scripts]
runleiden = 'runleiden.runleiden:entry_point'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
